# mp-spdz

./: build.sh
Applications/: CMakeCache.txt  CMakeLists.txt
Applications/_3rdParty/Hunter/: install-root-dir
Applications/_3rdParty/Hunter/config-id/: config.cmake
Applications/src/: CMakeLists.txt  main.cpp
Networking/: IPC.cpp  IPC.h  Player.h
Programs/Source/: dark_pool.mpc  dark_pool_fail.mpc  dark_pool_inputs.mpc
